<resources>
    <string name="app_name">Path Deck</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_username">Forgot UserName</string>
    <string name="forgot_password">Forgot password</string>

    <!--    login page -->
    <string name="LOGIN_PREFS">edu.tacoma.uw.finalproject.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- string name="hello_blank_fragment">Hello blank fragment</string -->
    <!-- Add Course Fragment hints -->
    <string name="enter_who_hint">Enter person name</string>
    <string name="enter_phone_hint">Enter phone number</string>
    <string name="enter_email_hint">Enter email address</string>
    <string name="enter_date_hint">Enter date in format mm/dd/yyyy</string>
    <string name="enter_location_hint">Enter location</string>

    <string name="btn_add_note">Add Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_health_information">Update Health Information</string>
    <string name="enter_the_current_body_temperature">Enter the current body temperature (°F)</string>
    <string name="enter_the_symptoms">Enter the symptoms, if any. Otherwise enter N/A.</string>
    <string name="enter_testing_result">Enter testing result, if any. Otherwise enter N/A</string>
    <string name="update">Update</string>
</resources>