<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoteAddFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/note_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_who_hint"/>
    <EditText
        android:id="@+id/note_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_hint"/>
    <EditText
        android:id="@+id/note_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_hint"/>
    <EditText
        android:id="@+id/note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date_hint"/>
    <EditText
        android:id="@+id/note_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_location_hint"/>
    <Button
        android:id="@+id/btn_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_add_note"/>

</LinearLayout>