<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    tools:context=".HealthAddFragment">



    <TextView
        android:text="@string/update_health_information"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
    </TextView>


    <EditText
        android:id="@+id/health_add_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enter_the_current_body_temperature"/>
    <EditText
        android:id="@+id/health_add_symp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/enter_the_symptoms"/>
    <EditText
        android:id="@+id/health_add_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:textSize="15sp"
        android:hint="@string/enter_testing_result"/>

    <EditText
        android:id="@+id/health_add_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_date_hint"/>

    <Button
        android:id="@+id/btn_update_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/update"/>

</LinearLayout>